添加轮播图

--- a/first_demo/pages/test/test.wxml
+++ b/first_demo/pages/test/test.wxml
@@ -1,3 +1,14 @@
 <view class="container">  
     <text>这是我的test页面哦哦！！！</text>  
 </view>  
+<!-- 轮播图效果 -->
+<view class="swiper-container">
+<swiper indicator-dots="{{indicatorDots}}"
+ autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
+ <block wx:for="{{imgUrls}}" wx:key="unique">
+  <swiper-item>
+   <image src="{{item}}" class="slide-image"/>
+  </swiper-item>
+ </block>
+</swiper>
+</view>
