--- a/first_demo/pages/setting/setting.wxml
+++ b/first_demo/pages/setting/setting.wxml
@@ -1,8 +1,9 @@
-<view class="container">
+<view class="container" >
 	<view class="section panel">
 	  <text class="section_title">工作时长(分钟)</text>
 	  <view class="section_body">
 	    <slider 
+		    	bindchange="changeWorkTime" 
 	    	bindchange="changeWorkTime" 
 	    	show-value="true" 
 	    	min="1"
@@ -13,10 +14,11 @@
 	  </view>
 	</view>
 
-	<view class="section panel">
+	<view class="section panel" >
 	  <text class="section_title">休息时长(分钟)</text>
 	  <view class="section_body">
 	    <slider 
+			bindchange="changeWorkTime" 
 	    	bindchange="changeRestTime" 
 	    	show-value="true" 
 	    	min="5"
@@ -31,18 +33,12 @@
 	  <view class="section_title">
 	  	<text>主页背景</text>
 	  </view>
-	  <view class="section_body">
-	  	<text bindtab="" class="section_tip">选择背景 > </text>
-	  </view>
 	</view>
 
 	<view class="section panel">
 	  <view class="section_title">
 	  	<switch class="section_check" type="checkbox" size="mini" checked bindchange="switch1Change"/>
 	  	<text>启用铃声</text>
-	  </view>
-	  <view class="section_body">
-	  	<text bindtab="" class="section_tip">选择铃声 > </text>
 	  </view>
 	</view>
 
